# ANNA

./: .gitignore  SPEC.md  demo.py  demo_query.py  grammar.ebnf  pyproject.toml  test_advanced_ops.py  test_parser_03.py  test_requires_state.py
anna/: __init__.py  __main__.py  ast_nodes.py  lexer.py  parser.py  patch_engine.py  query_engine.py
docs/: 00-overview.md  01-file-structure.md  02-type-system.md  03-module-and-metadata.md  04-contracts.md  05-structural-addressing.md  06-patch-system.md  07-query-system.md  08-full-example.md  README.md  improvement-proposal-1.1.md
examples/: 01_ecommerce_cart.anna  02_ai_patches.anna  03_ai_queries.anna
